Corrected some issues with navbar alignment and some labels

--- a/css/styles.css
+++ b/css/styles.css
@@ -29,14 +29,15 @@
   -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
   box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);*/
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-
+  display: grid;
+  grid-template-columns: 1fr 10fr 1fr;
+  grid-template-rows: 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 0px;
 }
 #nav-bar .left {
   width: 140px;
+  margin: auto;
 }
 
 /*#nav-bar .right {
@@ -159,10 +160,14 @@
 }
 
 #nav-bar .center {
-  margin: 0 20px;
+  margin: auto;
 }
 
 #nav-bar .center input {
   width: 30em;
   margin: 0 1em;
+}
+
+.right {
+  margin: auto;
 }
